[tool.poetry]
name = "electronics-shop"
version = "0.1.0"
description = ""
authors = ["admin <D.Alavaro@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
